Added relevant error codes and began error implementation
Implementation of error codes for forms with post-processed data.

Isuue is that it causes a page refresh which is not desirable  when these forms will hopefully be compiled onto one page

--- a/groupsapp/templates/groupsapp/components/joingroup.html
+++ b/groupsapp/templates/groupsapp/components/joingroup.html
@@ -1,6 +1,7 @@
 {% extends 'base.html'%}
 {% block content %}
 <div class="card scoutpurple col-md-4 col-sm-12">
+    {% include 'components/formerrordiv.html' %}
     <form action="{% url 'joingroup'%}" method="post" class="card-body">
         {% csrf_token %}
         <div id="code">
