--- a/groupsapp/templates/groupsapp/index.html
+++ b/groupsapp/templates/groupsapp/index.html
@@ -28,6 +28,18 @@
     <div class="card col-md-6">
         <div class="card-body">
             <h2 class="card-title text-center">Groups:</h2>
+            <div class="row">
+                {% for group in groups %}
+                <div class="card col-lg-6">
+                    <ul class="card-body list-group">
+                        <h5 class="card-title">{{ group }} </h5>
+                        <li class="list-group-item"></li>
+                    </ul>
+                </div>
+                {% empty %}
+                <h2>NoTHING</h2>
+                {% endfor %}
+            </div>
         </div>
     </div>
 </div>
