Added memberpages preparation

--- a/groupsapp/templates/groupsapp/index.html
+++ b/groupsapp/templates/groupsapp/index.html
@@ -15,7 +15,7 @@
                 {% for member in members %}
                 <div class="card col-lg-6">
                     <ul class="card-body list-group">
-                        <h5 class="card-title"><a href="{% url 'profile' member.id %}">{{ member.first_name }}  {{member.last_name}}</a></h5>
+                        <h5 class="card-title"><a href="{% url 'member' member.id %}">{{ member.first_name }}  {{member.last_name}}</a></h5>
                         <li class="list-group-item">Date of birth: {{member.dob}}</li>
                     </ul>
                 </div>
