--- a/groupsapp/templates/groupsapp/components/joingroup.html
+++ b/groupsapp/templates/groupsapp/components/joingroup.html
@@ -19,7 +19,7 @@ for (var i = 0; i < labels.length; i++) {
             elem.label = labels[i];         
     }
 }
-
+code.autocomplete = 'off'
 /* Checks if field is already prefilled */
 function checkInput(){
     if(code.value.charAt(0) == 'M'){
