--- a/groupsapp/templates/groupsapp/index.html
+++ b/groupsapp/templates/groupsapp/index.html
@@ -1,14 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
-{{joingroup}}
-{{test}}
+
 <div class="card row">
     <div class="card-body">
         <h1 class="card-title text-center"> Welcome <p class="text-muted">{{user.username}}</p></h1>
     </div>
 </div>
 <div class="row">
-    <div class="card col-md-6">
+    <div class="card col-md-6 mt-3">
         <div class="card-body">
             <h2 class="card-title text-center"> Members</h2>
             <div class="row">
@@ -27,7 +26,7 @@
             </div>
         </div>
     </div>
-    <div class="card col-md-6">
+    <div class="card col-md-6 mt-3">
         <div class="card-body">
             <h2 class="card-title text-center">Groups:</h2>
             <div class="row">
@@ -52,6 +51,30 @@
                 {% endfor %}
             </div>
         </div>
+        
+    </div>
+    <div class="card col-md-6 float-right mt-3">
+        <div class="card-body">
+            <h2 class="card-title text-center">User Groups:</h2>
+            <div class="row">
+
+                {% for group in usergroups %}
+                <div class="card col-lg-6">
+                    <ul class="card-body list-group">
+                        {% if group != 'No Group' %}
+                        <h5 class="card-title"><a href="{% url 'group' group.0.id %}">{{ group.0 }}</a></h5>
+                        {%else%}
+                        <h6 class="card-title">{{ group }}</h6>
+                        <a class="card-title" href="{% url 'joingroup'%}">Use a join code to join a group</a>
+                        {%endif%}
+                        <li class="list-group-item">{{group.1}}</li>
+
+                    </ul>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
     </div>
 </div>
+
 {% endblock %}
