--- a/index/template/base.html
+++ b/index/template/base.html
@@ -4,5 +4,13 @@
     <title>HomePage</title>
 </head>
 <body>
+    <center>
+    <h1>DataFlair Django Tutorials</h1>
+{% block body_block %}
+<h1>Welcome to the Home-Page</h1>
+<h2> search for others/ </h2>
+      <h2> we are in the block of home page</h2>
+{% endblock %}
+</center>
 </body>
 </html>
