--- a/templates/base.html
+++ b/templates/base.html
@@ -28,9 +28,11 @@
               <a class="nav-link" href="#">Groups</a>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
+          {% if user.is_authenticated %}
+          <form class="form-inline my-2 my-lg-0" action="{% url 'logout'%}">
             <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Log Out</button>
           </form>
+          {% endif %}
         </div>
       </nav>
     {% if messages %}
