--- a/groupsapp/templates/groupsapp/index.html
+++ b/groupsapp/templates/groupsapp/index.html
@@ -7,7 +7,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="card col-md-6 mt-3">
+    <div class="card col-md-6 mt-3 scoutpurple">
         <div class="card-body">
             <h2 class="card-title text-center"> Members</h2>
             <div class="row">
@@ -53,6 +53,7 @@
         </div>
         
     </div>
+    {% if usergroups %}
     <div class="card col-md-6 float-right mt-3">
         <div class="card-body">
             <h2 class="card-title text-center">User Groups:</h2>
@@ -75,6 +76,7 @@
             </div>
         </div>
     </div>
+    {% endif %}
 </div>
 
 {% endblock %}
