--- a/groupsapp/templates/groupsapp/objects/member/profile.html
+++ b/groupsapp/templates/groupsapp/objects/member/profile.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="row">
+<div class="row col-12">
     <div class="card">
         <div class="card-body">
         {{member}}
         {{member.dob}}
         {{user}}
         {{groups}}
+        <form action=
         </div>
     </div>
 </div>
