--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/app/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Profile</a>
@@ -29,15 +29,16 @@
             </li>
           </ul>
           {% if user.is_authenticated%}
-          <form class="form-inline my-2 my-lg-0" action="{% url 'logout'%}" method="post">
+          <form class="form-inline my-2 my-lg-0" action="{% url 'logout'%}" method="POST">
+            {% csrf_token %}
             <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Log Out</button>
           </form>
           {% endif%}
         </div>
       </nav>
     {% if messages %}
-    <ul class="messages alert alert-primary">
-      {% for message in messages %}
+    {% for message in messages %}
+    <ul class="messages alert {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}alert-primary{% endif %} {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}alert-danger{% endif %} ">
       <li class="{{ message.tags }}">{{ message }}</li>
     {% endfor %}
     </ul>
