--- a/groupsapp/templates/groupsapp/login.html
+++ b/groupsapp/templates/groupsapp/login.html
@@ -6,7 +6,9 @@
         <h1 class="card-title">Log in to Group Manager</h1>
         <table>
             {{form.as_table}}
+            
         </table>
+        <a href="/app/register">Register an account here</a><br>
         <button type="submit" value="Submit">Submit</button>
     </form>
 </div>
