--- a/groupsapp/templates/groupsapp/register.html
+++ b/groupsapp/templates/groupsapp/register.html
@@ -7,6 +7,7 @@
         <table>
             {{form.as_table}}
         </table>
+        <a href="/app/login">Already have an account? Login here</a><br>
         <button type="submit" value="Submit">Submit</button>
     </form>
 </div>
