--- a/groupsapp/templates/groupsapp/objects/member/profile.html
+++ b/groupsapp/templates/groupsapp/objects/member/profile.html
@@ -5,9 +5,10 @@
         <div class="card-body">
         {{member}}
         {{member.dob}}
+        {{member.gender}}
         {{user}}
         {{groups}}
-        <form action=
+        
         </div>
     </div>
 </div>
