Finished member tools

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,17 +17,21 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/app/">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/app/">Overview <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Members</a>
+              <a class="nav-link" href="{% url 'addmember'%}">Add Member</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Groups</a>
-            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">Group Tools</a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="{% url 'joingroup'%}">Join Group</a>
+                <a class="dropdown-item" href="{% url 'joingroup'%}">Create Group</a>
+              </div>
+            </ul>
           </ul>
           {% if user.is_authenticated%}
           <form class="form-inline my-2 my-lg-0" action="{% url 'logout'%}" method="POST">
