--- a/groupsapp/templates/groupsapp/objects/member/profile.html
+++ b/groupsapp/templates/groupsapp/objects/member/profile.html
@@ -1,45 +1,76 @@
 {% extends 'base.html' %}
+{% load widget_tweaks %}
 {% block content %}
 <div class="row col-12">
     <div class="card">
         <div class="card-body">
-        {% load static %}
-        <img src="{% static "images/profile.svg"%}">
-        <table class="table">
-            <thead>
-                <tr>
-                <th scope="col">Details</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                <th scope="row">First Name</th>
-                <td>{{form.first_name}}</td>
-                </tr>
-                <tr>
-                <th scope="row">Last Name</th>
-                <td>{{form.last_name}}</td>
-                </tr>
-                <tr>
-                <th scope="row">Date Of Birth</th>
-                <td>{{form.dob}}</td>
-                </tr>
-                <tr>
-                <th scope="row">Gender</th>
-                <td>{{form.gender}}</td>
-                </tr>
-                <tr>
-                <th scope="row">Groups</th>
-                <td>
-                {% for group in groups%}
-                <a href="{% url 'group' group.id %}">{{group}}</a><br>
-                {%empty%}No Groups
-                {%endfor%}</td>
-                </tr>
-            </tbody>
-        </table>
-        
+            {% load static %}
+            <img src="{% static "images/profile.svg"%}">
+            <form method="post">
+                {% csrf_token %}
+                <table class="table">
+                    <thead>
+                        <tr>
+                        <th scope="col">Details</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                        <th scope="row">First Name</th>
+                        <td>{% render_field form.first_name class="form-control"%}</td>
+                        </tr>
+                        <tr>
+                        <th scope="row">Last Name</th>
+                        <td>{% render_field form.last_name class="form-control"%}</td>
+                        </tr>
+                        <tr>
+                        <th scope="row">Date Of Birth</th>
+                        <td>{% render_field form.dob class="form-control"%}</td>
+                        </tr>
+                        <tr>
+                        <th scope="row">Gender</th>
+                        <td>{% render_field form.gender class="form-control"%}</td>
+                        </tr>
+                        <tr>
+                        <th scope="row">Groups</th>
+                        <td>
+                        {% for group in groups%}
+                        <a href="{% url 'group' group.id %}">{{group}}</a><br>
+                        {%empty%}No Groups
+                        {%endfor%}</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <button type="submit" class="btn btn-primary">Save</button>
+            </form>
+            <br>
+            <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#deletionModal">Delete this member</button>
+
+            <!-- Member Deletion warning -->
+            <div class="modal fade" id="deletionModal" tabindex="-1" role="dialog" aria-labelledby="deletionModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="deletionModalLabel">Delete Member: {{member}}</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            Are you sure you want to delete this member? This action cannot be undone
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-outline-success" data-dismiss="modal">Cancel</button>
+                            <form action="{% url 'deleteobject' 'member' member.id %} " method="post">
+                            {%csrf_token%}
+                            <button type="submit" class="btn btn-danger" action=>Delete</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
 {% endblock %}
