--- a/groupsapp/templates/groupsapp/objects/group/profile.html
+++ b/groupsapp/templates/groupsapp/objects/group/profile.html
@@ -3,11 +3,9 @@
 <div class="row col-12">
     <div class="card">
         <div class="card-body">
-        {{member}}
-        {{member.dob}}
-        {{user}}
-        {{groups}}
-        <form action=
+        {{group}}
+        {{group.group_type}}
+        {{is_admin}}
         </div>
     </div>
 </div>
