--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,28 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
     <link rel="stylesheet" href="https://broxbournescouts.org.uk/CSS/global.css" type="css">
     <link rel="stylesheet" href="https://broxbournescouts.org.uk/CSS/colors.css" type="css">
+    <style>
+    .scoutred{
+    background-color: #e22e12;
+    color: white;
+}
+.scoutpurple{
+    color: white;
+    background-color: #7413dc;
+  }
+.scoutpurple-opacity{
+    background-color: rgba(116,19,220,0.75);
+    color: white;
+}
+.scoutgreen, .cubgreen{
+    color: white;
+    background-color: #23a950;
+}
+.scoutgreen-opacity{
+    background-color:rgba(35,169,80,0.75);
+    color: white;
+}
+</style>
     
 
 </head>
@@ -51,6 +73,8 @@
     {% endblock %}
     {% block content %}
     {% endblock %}
+    <footer class="page-footer font-small purple pt-4">
+    </footer>
   </div>
 </body>
 <script
