--- a/groupsapp/templates/groupsapp/login.html
+++ b/groupsapp/templates/groupsapp/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%}
 {% block content %}
-<div class="card scoutpurple">
+<div class="card">
     <form action="{% url 'login'%}" method="post" class="card-body">
         {% csrf_token %}
         <h1 class="card-title">Log in to Group Manager</h1>
