Added many things
Member profiles can be accessed by group admins

Added some comments

Created a new CheckMemberGroupLink function to check whether a group and memeber are linked

--- a/groupsapp/templates/groupsapp/components/joingroup.html
+++ b/groupsapp/templates/groupsapp/components/joingroup.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%}
 {% block content %}
 {%if error%}
-<ul class="messages alert alert-danger">
+<ul style="list-style-type:none;" class="messages alert alert-danger">
       <li class="success">{{error}}</li>
     
     </ul>
